# lualvm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  hellfire  lli_like.lua  lualvm-0.1-1.rockspec  lualvm-scm-1.rockspec  makefile
cmake/: FindLLVM.cmake  UseInclua.cmake
examples/: buildHelloWorld.lua  lli_like.lua
include/: core.hpp  core_enums.hpp  lualvm.hpp
include/core/: context.hpp  enums.hpp  module.hpp  type.hpp
ldoc/: config.ld  lualvm.lua
ldoc/core/: LLVMContext.lua  LLVMModule.lua  LLVMType.lua  context.lua  core.lua  module.lua  type.lua  use.lua
src/: BasicBlock.lua  Builder.lua  CMakeLists.txt  Context.lua  ExecutionEngine.lua  MemoryBuffer.lua  Module.lua  ObjectFile.lua  PassManager.lua  TargetData.lua  TargetMachine.lua  Type.lua  Value.lua  analysis.yml  bind.lua  code_rw.yml  common.i  context.lua  core.cpp  core.i  core.yml  execution_engine.lua  execution_engine.yml  hellfire  init.lua  irbuilder.yml  llvm.i  llvm.yml  lualvm.cpp  lualvm.lua  lualvm_bool.h  makefile  memory_buffer.lua  memory_buffer.yml  module.lua  target.yml  test.lua  transforms.yml  type.lua  value.lua  (+1 more)
src/core/: context.cpp  core.cpp  module.cpp  type.cpp
src/lua/: BasicBlock.lua  Builder.lua  Context.lua  ExecutionEngine.lua  MemoryBuffer.lua  Module.lua  ObjectFile.lua  PassManager.lua  TargetData.lua  TargetMachine.lua  Type.lua  Value.lua  bind.lua  init.lua
